--- a/index.html
+++ b/index.html
@@ -118,9 +118,7 @@
       </div>
 
       <div class="home-img">
-        <img
-          src="image/MV_ALMAMATER_NO_LOGO-removebg-preview.png"
-          alt="Profile" />
+        <img src="image/Latar-Biru.jpg" alt="Profile" />
       </div>
     </section>
     <!-- Home Section End -->
