--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script>
       function openNewWindow() {
         window.open(
-          "https://drive.google.com/drive/folders/1GwqrDZdQN18Z50qVgh30ugkomjIYMg13?usp=drive_link",
+          "https://drive.google.com/drive/folders/1GwqrDZdQN18Z50qVgh30ugkomjIYMg13?usp=sharing",
           "_blank"
         );
       }
@@ -28,47 +28,20 @@
     <!-- Header Start -->
     <header class="header">
       <a href="#home" class="logo"
-        ><img src="image/MV1.png" alt="Profile" />Markus Verlian</a
+        ><img src="image/Logo_Nexorifyok.png" alt="Profile" />Markus Verlian</a
       >
 
       <i class="bx bx-menu" id="menu-icon"></i>
-
       <nav class="navbar">
-        <a href="#home" class="active">Home</a>
-        <div class="dropdown">
-          <a href="#" class="dropdown-btn"
-            >About Me <i class="bx bx-chevron-down"></i
-          ></a>
-          <!-- <a href="#about">About Me</a> -->
-          <div class="dropdown-content">
-            <a href="#about">About Me</a>
-            <a href="#hobby">Hobby</a>
-            <a href="#home">Home</a>
-          </div>
-        </div>
-
-        <div class="dropdown">
-          <a href="#" class="dropdown-btn"
-            >Services <i class="bx bx-chevron-down"></i
-          ></a>
-          <div class="dropdown-content">
-            <a href="#services">Website</a>
-            <a href="#services">ContentWritting</a>
-            <a href="#services">Translator</a>
-          </div>
-        </div>
-
-        <div class="dropdown">
-          <a href="#" class="dropdown-btn"
-            >Contact Me <i class="bx bx-chevron-down"></i
-          ></a>
-          <div class="dropdown-content">
-            <a href="https://web.whatsapp.com/">WhatsApp</a>
-            <a href="https://www.instagram.com/verlian_02/">Instagram</a>
-            <a href="https://mail.google.com/mail/u/0/#inbox">Email</a>
-            <a href="https://goo.gl/maps/XsBp77siE6VUDc3e6">Location's</a>
-          </div>
-        </div>
+        <a href="#home" class="active">Beranda</a>
+        <a href="#about">Tentang Saya</a>
+        <a href="#services">Layanan</a>
+        <a href="#hobby">Project Terakhir</a>
+        <a
+          target="_blank"
+          href="https://mail.google.com/mail/?view=cm&fs=1&to=verlianofc@gmail.com&su=Halo%20Verlian&body=Halo%20Verlian%2C%20saya%20ingin%20menghubungi%20Anda."
+          >Kontak Saya</a
+        >
       </nav>
     </header>
     <!-- Header End -->
@@ -76,9 +49,9 @@
     <!-- Home Section Start -->
     <section class="home" id="home">
       <div class="home-content">
-        <h3>Hello, It's Me</h3>
+        <h3>Hallo, saya</h3>
         <h1>Markus Verlian</h1>
-        <h3>And I'm a <span class="multiple-text"></span></h3>
+        <h3>dan saya seorang <span class="multiple-text"></span></h3>
         <br />
         <p>
           "Halo, nama saya Markus Verlian. Saya seorang Mahasiswa Teknik
@@ -93,7 +66,8 @@
           melihatnya."
         </p>
         <div class="social-media">
-          <a href="https://www.instagram.com/verlian_02/"
+          <a
+            href="https://www.instagram.com/verliannnnn?igsh=MTZiNDQ3cXhsanc5eQ=="
             ><i class="bx bxl-instagram"></i
           ></a>
           <a href="https://www.facebook.com/markus.verliann/"
@@ -118,7 +92,7 @@
       </div>
 
       <div class="home-img">
-        <img src="image/Latar-Biru.jpg" alt="Profile" />
+        <img src="image/Latar-BW.png" alt="Profile" />
       </div>
     </section>
     <!-- Home Section End -->
@@ -126,18 +100,25 @@
     <!-- About Section Start -->
     <section class="about" id="about">
       <div class="about-img">
-        <img
+        <!-- <img
           src="image/WhatsApp_Image_2023-07-07_at_20.32.21-removebg-preview.png"
-          alt="About Me" />
+          alt="About Me" /> -->
       </div>
 
       <div class="about-content">
-        <h2 class="heading">About <span>Me</span></h2>
-        <h3>Web Developer</h3>
+        <h2 class="heading">Tentang <span>Saya</span></h2>
+        <h3>IT SUPPORT | UI/UX DESIGNER</h3>
         <p>
-          Saya Markus Verlian, Mahasiswa Teknik Informatika Universitas Widya
-          Dharma Pontianak Tahun 2020. Saya memiliki minat berkarir sebagai Web
-          Developer
+          Saya Markus Verlian, lulusan Teknik Informatika yang fokus di bidang
+          IT. Saya memiliki minat dalam IT Support, data entry, analisis data
+          dasar, serta desain UI/UX. Terbiasa menggunakan Microsoft Office,
+          Google Workspace, Figma, Canva dan Photoshop. Saya senang membantu
+          menyederhanakan teknologi agar lebih mudah digunakan, dan siap bekerja
+          secara profesional dalam tim maupun individu. Saat ini saya fokus
+          membangun portofolio sambil terus memperdalam kemampuan saya. Saya
+          percaya bahwa teknologi dapat menjadi solusi untuk berbagai kebutuhan
+          masyarakat, dan karena itu saya tertarik terlibat dalam proyek-proyek
+          yang memberi dampak positif dan nyata.
         </p>
         <a href="#" class="btn">Read More</a>
       </div>
@@ -149,6 +130,55 @@
       <h2 class="heading">Our <span>Services</span></h2>
 
       <div class="services-container">
+        <div class="services-box">
+          <i class="bx bx-code-alt"></i>
+          <h3>IT SUPPORT</h3>
+          <p>
+            IT Support adalah profesi yang memberikan dukungan teknis dan
+            bantuan kepada pengguna dalam mengatasi masalah terkait teknologi
+            informasi, perangkat keras, perangkat lunak, dan jaringan dalam
+            suatu organisasi. Mereka bertindak sebagai jembatan antara pengguna
+            dan teknologi, memastikan sistem berjalan lancar dan efisien.
+          </p>
+          <a href="#" class="btn">Read More</a>
+        </div>
+
+        <div class="services-box">
+          <i class="bx bx-line-chart"></i>
+          <h3>UI/UX DESIGNER</h3>
+          <p>
+            UI/UX designer adalah seorang profesional yang bertanggung jawab
+            untuk merancang antarmuka pengguna (UI) dan pengalaman pengguna (UX)
+            pada produk digital seperti aplikasi atau website. Mereka memastikan
+            produk mudah digunakan, menyenangkan, dan efektif bagi pengguna.
+          </p>
+          <a href="#" class="btn">Read More</a>
+        </div>
+
+        <div class="services-box">
+          <i class="bx bx-line-chart"></i>
+          <h3>DATA ANALYST</h3>
+          <p>
+            data analyst adalah seorang profesional yang bertugas menganalisis
+            data untuk memberikan wawasan yang berharga bagi suatu organisasi.
+            Mereka mengumpulkan, membersihkan, dan menganalisis data mentah,
+            kemudian menyajikannya dalam bentuk yang mudah dipahami, seperti
+            laporan atau visualisasi, untuk membantu pengambilan keputusan yang
+            lebih baik.
+          </p>
+          <a href="#" class="btn">Read More</a>
+        </div>
+
+        <div class="services-box">
+          <i class="bx bx-line-chart"></i>
+          <h3>Data Entry</h3>
+          <p>
+            Data Entry adalah proses digitalisasi data dengan memasukkannya ke
+            dalam sistem komputer untuk tujuan organisasi dan manajemen.
+          </p>
+          <a href="#" class="btn">Read More</a>
+        </div>
+
         <div class="services-box">
           <i class="bx bx-code-alt"></i>
           <h3>Web Development</h3>
@@ -169,23 +199,13 @@
           </p>
           <a href="#" class="btn">Read More</a>
         </div>
-
-        <div class="services-box">
-          <i class="bx bx-line-chart"></i>
-          <h3>Data Entry</h3>
-          <p>
-            Data Entry adalah proses digitalisasi data dengan memasukkannya ke
-            dalam sistem komputer untuk tujuan organisasi dan manajemen.
-          </p>
-          <a href="#" class="btn">Read More</a>
-        </div>
       </div>
     </section>
     <!-- Services Section End -->
 
     <!-- Hobby Section Strat -->
     <section class="portfolio" id="hobby">
-      <h2 class="heading">Latest <span>Project</span></h2>
+      <h2 class="heading">Project <span>Terakhir</span></h2>
 
       <div class="portfolio-container">
         <div class="portfolio-box">
@@ -297,3 +317,9 @@
     <!-- Custom JavaScript End -->
   </body>
 </html>
+
+<!-- up to git hub
+ 
+git add .
+git commit -m 
+git push-->
