--- a/index.html
+++ b/index.html
@@ -83,9 +83,7 @@
           <a href="https://www.youtube.com/channel/UC-FsH97ueqq8eWLfA_qifgQ"
             ><i class="bx bxl-youtube"></i
           ></a>
-          <a href="https://saweria.co/Lifiethan02"
-            ><i class="bx bxs-bank"></i
-          ></a>
+          <a href="https://lynk.id/nexodigital"><i class="bx bxs-bank"></i></a>
         </div>
         <button class="btn" onclick="openNewWindow()">Download CV</button>
         <!-- <a href="D_Cv.html" class="btn">Download CV</a> -->
@@ -206,26 +204,81 @@
     <!-- Hobby Section Strat -->
     <section class="portfolio" id="hobby">
       <h2 class="heading">Project <span>Terakhir</span></h2>
-
       <div class="portfolio-container">
+        <div class="portfolio-box">
+          <img src="image/it support image.png" alt="Project" />
+          <div class="portfolio-layer">
+            <h4>It Support</h4>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Laudantium at dolores totam, dicta minus accusantium aspernatur
+              est quam voluptates dignissimos deserunt eaque tenetur commodi
+              voluptatibus ducimus temporibus optio neque aliquam?
+            </p>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="image/data entry img.jpg" alt="Project" />
+          <div class="portfolio-layer">
+            <h4>Data Entry</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi
+              dolorum praesentium sunt consequatur velit ea ratione odit,
+              accusamus suscipit porro laborum culpa. Veniam neque eius quia
+              ipsa aspernatur inventore nemo?
+            </p>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="image/uiux img.jpg" alt="Project" />
+          <div class="portfolio-layer">
+            <h4>UI/UX Design</h4>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor,
+              nihil. Reiciendis magnam commodi autem, sint saepe suscipit
+              provident, iste veritatis quisquam, voluptate alias ipsa odit
+              soluta adipisci ut. In, pariatur!
+            </p>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="image/microsoft office.png" alt="Project" />
+          <div class="portfolio-layer">
+            <h4>Microsoft Office</h4>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor,
+              nihil. Reiciendis magnam commodi autem, sint saepe suscipit
+              provident, iste veritatis quisquam, voluptate alias ipsa odit
+              soluta adipisci ut. In, pariatur!
+            </p>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+
         <div class="portfolio-box">
           <img src="image/Home.png" alt="Project" />
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>
-              Membuat Sebuah Website Sederhana sampai website Profesional
-              menggunakan Html, Css , js & Php.
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Provident harum possimus sunt odit beatae minima deserunt repellat
+              accusantium eveniet incidunt, rem minus eligendi quibusdam
+              dignissimos enim animi, nostrum, mollitia illo.
             </p>
-            <a href="portfolio.verlian.repl.co"
-              ><i class="bx bx-link-external"></i
-            ></a>
+            <a href="#"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
 
         <div class="portfolio-box">
           <img src="image/Bakopie.png" alt="Project" />
           <div class="portfolio-layer">
-            <h4>Web E-Commerce Design</h4>
+            <h4>Web Development</h4>
             <p>Membuat sebuah website e-commerce.</p>
             <a href="https://BAKOPI.verlian.repl.co"
               ><i class="bx bx-link-external"></i
@@ -238,8 +291,10 @@
           <div class="portfolio-layer">
             <h4>Perpustakaan Localhost</h4>
             <p>
-              Membuat sebuah sistem informasi peminjaman, pengembalian dan
-              Laporan Pada perpustakaan sekolah berbasis localhost.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus
+              asperiores temporibus inventore sunt totam eum officia vel debitis
+              rem? Assumenda odio magnam fugit inventore aut. Eveniet laboriosam
+              incidunt amet recusandae?
             </p>
             <a href="#"><i class="bx bx-link-external"></i></a>
           </div>
@@ -248,35 +303,60 @@
         <div class="portfolio-box">
           <img src="image/p.web_akatsuki.png" alt="Project" />
           <div class="portfolio-layer">
-            <h4>Web Design</h4>
+            <h4>Web Blog</h4>
             <p>
-              Membuat sebuah website berbentuk cerita, Penjelasan atau semacam
-              artikel.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
+              repellendus nulla ipsam quis voluptas laudantium vel explicabo,
+              nostrum quam? Deleniti commodi repellendus at omnis modi,
+              molestiae nostrum magni quis laudantium?
             </p>
-            <a href="https://Akatsuki-Stories.verlian.repl.co"
-              ><i class="bx bx-link-external"></i
-            ></a>
+            <a href="#"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
 
         <div class="portfolio-box">
           <img src="image/Content Writer.png" alt="Project" />
           <div class="portfolio-layer">
-            <h4>Web Design</h4>
+            <h4>Content Writer</h4>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
               Quibusdam expedita commodi animi beatae accusamus consectetur,
               facere eveniet aspernatur enim magnam dignissimos mollitia eum qui
               architecto hic! Sapiente dolores dolorum fuga.
             </p>
-            <a href="https://20421393michaelf.wixsite.com/my-site"
-              ><i class="bx bx-link-external"></i
-            ></a>
+            <a href="#"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
 
         <div class="portfolio-box">
-          <img src="image/jason.jpg" alt="Project" />
+          <img src="image/e-guestbook.png" alt="Project" />
+          <div class="portfolio-layer">
+            <h4>Design Grafis</h4>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Quibusdam expedita commodi animi beatae accusamus consectetur,
+              facere eveniet aspernatur enim magnam dignissimos mollitia eum qui
+              architecto hic! Sapiente dolores dolorum fuga.
+            </p>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="image/pagee2.png" alt="Project" />
+          <div class="portfolio-layer">
+            <h4>Design Grafis</h4>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Quibusdam expedita commodi animi beatae accusamus consectetur,
+              facere eveniet aspernatur enim magnam dignissimos mollitia eum qui
+              architecto hic! Sapiente dolores dolorum fuga.
+            </p>
+            <a href="#"><i class="bx bx-link-external"></i></a>
+          </div>
+        </div>
+        <div class="portfolio-box">
+          <img src="image/Design Form Login.png" alt="Project" />
           <div class="portfolio-layer">
             <h4>Design Grafis</h4>
             <p>
